@@ -34,6 +34,9 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Patch #1093585: raise a ValueError for negative history items in readline.
+  {remove_history,replace_history}
+
 - The spwd module has been added, allowing access to the shadow password
   database.
 
